--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->    
+    <style>
+      html {
+        height:100%
+      }
+      body{
+        height:100%
+      }
+      #root{
+        height:100%
+      }
+      ._loading_overlay_wrapper{
+        min-height:100%
+      }
+    </style>
 
     <title>React App</title>
   </head>
