update readme and index

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       }
     </style>
 
-    <title>React App</title>
+    <title>Flood Mapping Metadata Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
